--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     />
     <meta
       name="keywords"
-      content="dheerajsharmaquiz dheerajquiz dheerajquz computerquiz computerquizbydheeraj computerquizbydheerajsharma"
+      content="dheerajsharmaquiz dheerajquiz dheerajquz quizapp quizbydheeraj quizbydheerajsharma javascriptquiz javascriptquizexample dheerajsharmaquiznetlify dheeraj sharma quiz netlify Dheeraj sharma"
     />
     <link rel="stylesheet" href="./style.css" />
-    <title>Dheeraj Sharma - Computer Quiz</title>
+    <title>Dheeraj Sharma - Quiz</title>
   </head>
   <body>
     <div id="wrapper">
-      <h1 class="heading">Computer Quiz</h1>
+      <h1 class="heading">Quiz App</h1>
       <div class="container">
         <div class="header">
           <p id="quesNo"></p>
