--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
       content="dheerajsharmaquiz dheerajquiz dheerajquz quizapp quizbydheeraj quizbydheerajsharma javascriptquiz javascriptquizexample dheerajsharmaquiznetlify dheeraj sharma quiz netlify Dheeraj sharma"
     />
     <link rel="stylesheet" href="./style.css" />
-    <title>Dheeraj Sharma - Quiz</title>
+    <title>Quizster - play quiz</title>
   </head>
   <body>
     <div id="wrapper">
-      <h1 class="heading">Quiz App</h1>
+      <h1 class="heading">Quizster</h1>
       <div class="container">
         <div class="header">
           <p id="quesNo"></p>
